fixed: bug with navbar hamberger not showing correctly

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -20,7 +20,7 @@
 
 /* Hero with the cables */
 .hero {
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   right: 50%;
